# pygmh

./: CHANGELOG.md  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
pygmh/: model.py
pygmh/cli/: benchmark.py  info.py  transcode.py  util.py
pygmh/dataset/: __init__.py  image_set.py
pygmh/model/: __init__.py  identifier.py  image.py  meta_data.py  misc.py  segment.py  slice.py
pygmh/persistence/: __init__.py  interface.py  lazy_image.py  lazy_model.py
pygmh/persistence/gmh/: adapter.py  constants.py  data_loader.py  manifest-schema.json
pygmh/util/: random_string.py
pygmh_test/: generate_test_image.py
pygmh_test/assets/simple_gmh/: image_data.npy  my-identifier123.gmh  seg1.npy  seg2.npy
pygmh_test/functional/: assertions.py  image_generation.py  test_persistence.py
pygmh_test/unit/dataset/: test_image_set.py
pygmh_test/unit/util/: test_random_string.py
